classDiagram
    class Owner {
        +String name
        +List~Pet~ pets
        +add_pet(Pet pet)
    }
    
    class Pet {
        +String name
        +String species
        +List~Task~ tasks
        +add_task(Task task)
    }
    
    class Task {
        +String title
        +int duration_minutes
        +String priority
        +String start_time
        +String frequency
        +bool is_completed
        +date due_date
        +mark_complete()
    }
    
    class Scheduler {
        +int available_time_minutes
        +filter_tasks(Owner owner, String pet_name, bool is_completed) List~tuple~
        +sort_by_time(List~tuple~ tasks) List~tuple~
        +detect_conflicts(List~tuple~ tasks) List~String~
        +complete_and_reschedule(Pet pet, Task task)
        +generate_daily_plan(Owner owner) String
    }

    Owner "1" *-- "many" Pet : owns
    Pet "1" *-- "many" Task : has
    Scheduler ..> Owner : schedules for